@@ -118,7 +118,7 @@ require "rubygems/deprecate"
 # -The RubyGems Team
 
 module Gem
-  VERSION = '1.8.7'
+  VERSION = '1.8.8'
 
   ##
   # Raised when RubyGems is unable to load or activate a gem.  Contains the
